# ClarifyCodeBench

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
clarifycodebench/: __init__.py  extract.py  functional.py  interact.py  judge_validation.py  llm.py  metrics.py  prompts.py  taxonomy.py
configs/: models.yaml
data/: ClarifyCodeBench.jsonl  README.md
examples/: sample_results.jsonl
scripts/: compute_metrics.py  prepare_pass1.py  run_eval.py  validate_judge.py
